[gd_scene load_steps=7 format=3 uid="uid://chi4cvlu1uqbp"]

[ext_resource type="Script" uid="uid://dyxsjxpvsie0m" path="res://model/shop/shop.gd" id="1_hnfw6"]
[ext_resource type="Texture2D" uid="uid://cqwsm3uxbo3v1" path="res://assets/shop/shop_background.png" id="2_ml1kn"]
[ext_resource type="FontFile" uid="uid://cpy65047eb1jb" path="res://font/Minecraftia-Regular.ttf" id="3_42id8"]
[ext_resource type="Texture2D" uid="uid://bumd5nqtlxckj" path="res://assets/button/exit_button/exit_button.png" id="4_nbf5o"]
[ext_resource type="Texture2D" uid="uid://bfayxlrb2hkix" path="res://assets/button/exit_button/exit_button_click.png" id="5_m57ju"]
[ext_resource type="Texture2D" uid="uid://01twtxxewgs2" path="res://assets/button/exit_button/exit_button_hover.png" id="6_86ks1"]

[node name="Shop" type="CanvasLayer"]
script = ExtResource("1_hnfw6")

[node name="PanelAntiClick" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TRectBackground" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -673.25
offset_top = -475.0
offset_right = 673.25
offset_bottom = 475.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
texture = ExtResource("2_ml1kn")

[node name="RLabelTitle" type="RichTextLabel" parent="TRectBackground"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.1354737
anchor_right = 0.5
anchor_bottom = 0.1354737
offset_left = -388.0
offset_top = -35.700012
offset_right = 388.0
offset_bottom = 84.29999
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.5372549, 0.8117647, 0.9411765, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/normal_font = ExtResource("3_42id8")
bbcode_enabled = true
text = "[center][font_size=65]BOUTIQUE
"
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="TButtonExit" type="TextureButton" parent="TRectBackground"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.93200004
anchor_top = 0.08800001
anchor_right = 0.93200004
anchor_bottom = 0.08800001
offset_left = -37.43811
offset_top = -37.600006
offset_right = 37.06189
offset_bottom = 36.899994
grow_horizontal = 0
texture_normal = ExtResource("4_nbf5o")
texture_pressed = ExtResource("5_m57ju")
texture_hover = ExtResource("6_86ks1")
stretch_mode = 0

[node name="ScrollBuildings" type="ScrollContainer" parent="TRectBackground"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.091000006
anchor_top = 0.294
anchor_right = 0.90000004
anchor_bottom = 0.85300004
offset_left = -0.2815094
offset_top = -0.2999878
offset_right = 0.39990234
offset_bottom = 0.29992676
grow_horizontal = 2
grow_vertical = 2

[node name="Buildings" type="GridContainer" parent="TRectBackground/ScrollBuildings"]
custom_minimum_size = Vector2(1000, 1000)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 56
theme_override_constants/v_separation = 40
columns = 2

[connection signal="pressed" from="TRectBackground/TButtonExit" to="." method="_on_exit_button_pressed"]
